# serverless-rust

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  serverless.yml
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/.aws/: config  credentials
.devcontainer/docker/rust/: Dockerfile
.devcontainer/script/: docker-entrypoint.sh
src/main/resources/: Cargo.toml
src/main/rust/hello_world/: Cargo.toml
src/main/rust/hello_world/src/: main.rs
