[package]
name = "hello_world"
version = "0.1.0"
authors = ["hisayuki <siruvalice@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
lambda_http = "0.1.1"
log = "0.4.8"
serde_json = "1.0.55"
serde_derive = "1.0.113"
